[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Teleporter.gd" type="Script" id=1]
[ext_resource path="res://Objects/Teleporter.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Activated"
length = 0.333333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.5
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 2.00028

[sub_resource type="CircleShape2D" id=4]

[node name="Teleporter" type="Node2D" groups=[
"Teleporter",
]]
z_index = -1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Activated = SubResource( 1 )
anims/Idle = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 72

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.033371 )
shape = SubResource( 3 )

[node name="Reciever Detection" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 72

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reciever Detection"]
shape = SubResource( 4 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="Reciever Detection" to="." method="_on_Reciever_Detection_area_entered"]
